converting to a class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_subdirectory("./libmodbus" libmodbus)
 include_directories("../libmodbus/include")
 
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} main.cpp ModbusHardware.cpp)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE libmodbus)
